<resources>
    <string name="app_name">Bisit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--오늘의 예약-->
    <string name="sort_icon">정렬 기준 아이콘</string>
    <string name="today_content">내용</string>
    <string name="today_approve_check">승인 내역 확인</string>
    <string name="sort_check_recent">최신 순으로</string>
    <string name="sort_check_oldest">오래된 순으로</string>
    <string name="today_title">오늘의 예약</string>
    <string name="today_tab_pending">대기</string>
    <string name="today_tab_approved">승인</string>
    <string name="today_label_reservation">예약 정보</string>
    <string name="today_label_sort">정렬 기준</string>
    <string name="today_label_procedure">시술명</string>
    <string name="today_label_date">방문 시간</string>
    <string name="today_label_address">주소</string>
    <string name="today_button_reject">거절하기</string>
    <string name="today_button_approve">승인하기</string>
    <string name="today_button_input">입력하기</string>
    <string name="today_dialog_reason_title">거절 사유</string>
    <string name="today_dialog_reason_hint">내용을 입력해주세요.</string>
    <string name="today_dialog_confirm">확인</string>
    <string name="today_dialog_cancel_title">예약을 취소하시겠어요?</string>
    <string name="today_dialog_no">아니요</string>
    <string name="today_close">닫기</string>
    <string name="today_dialog_yes">예</string>
    <string name="sort_title">정렬 기준</string>
    <string name="sort_recent">최근 순으로</string>
    <string name="sort_oldest">오래된 순으로</string>
    <string name="sort_save">저장하기</string>

    <string-array name="step_labels">
        <item>담당 확인</item>
        <item>서비스 일시</item>
        <item>서비스 선택</item>
        <item>이용 방식</item>
    </string-array>

    <string name="next_step">다음 단계</string>

    <!-- 매장관리 탭 -->
    <string name="tab_basic">기본</string>
    <string name="tab_reviews">리뷰</string>
    <string name="tab_services">서비스 등록</string>
    <string name="tab_notices">공지사항</string>

    <!-- 버튼/공통 -->
    <string name="btn_save">저장하기</string>
    <string name="btn_add">추가하기</string>
    <string name="btn_edit">수정하기</string>
    <string name="btn_delete">삭제하기</string>
    <string name="btn_close">닫기</string>
    <string name="btn_confirm">확인</string>
    <string name="btn_cancel">취소</string>

    <!-- 다이얼로그 / 안내 -->
    <string name="dialog_title_edit_info">매장 정보 수정</string>
    <string name="dialog_title_edit_sales">매출 관리 수정</string>
    <string name="dialog_title_edit_hours">영업시간 수정</string>
    <string name="dialog_title_add_service">메뉴 추가하기</string>
    <string name="dialog_title_add_notice">공지 추가</string>

    <!-- 입력 placeholder -->
    <string name="hint_shop_name">매장 이름을 입력해주세요.</string>
    <string name="hint_shop_phone">010-0000-0000</string>
    <string name="hint_shop_address">건물, 지번 또는 도로명 검색</string>
    <string name="hint_shop_detail">상세 주소 입력</string>
    <string name="hint_service_title">시술명을 입력해주세요.</string>
    <string name="hint_service_price">가격을 입력해주세요.</string>
    <string name="hint_service_time">시술 소요시간</string>
    <string name="hint_service_desc">시술 설명을 입력해주세요.</string>
    <string name="hint_notice_title">제목을 입력해주세요.</string>
    <string name="hint_notice_content">내용을 입력해주세요.</string>

    <!-- 안내 메시지 -->
    <string name="msg_edit_success">수정이 완료되었습니다.</string>
    <string name="msg_edit_fail">인증에 실패하였습니다.</string>
    <string name="msg_delete_confirm">삭제하시겠어요?</string>
    <string name="msg_delete_done">삭제되었습니다.</string>

    <!-- 공통 라벨 -->
    <string name="label_open_time">영업시간</string>
    <string name="label_break_time">브레이크타임</string>
    <string name="label_holiday">정기 휴무</string>
    <string name="label_account">계좌번호 수정</string>
    <string name="label_intro">매장 소개</string>
    <string name="label_service">제공 서비스</string>

    <string name="underlined_text"><u>수정하기</u></string>

    <!-- add_service -->
    <string name="dialog_title_shop_service">서비스 등록</string>
    <string name="label_service_name">서비스명</string>
    <string name="hint_service_name">시술을 입력해주세요.</string>
    <string name="label_price">가격</string>
    <string name="hint_price">가격을 입력해주세요.</string>
    <string name="label_duration">소요 시간</string>
    <string name="label_description">시술 설명</string>
    <string name="hint_description">시술 설명을 입력해주세요.</string>

    <string name="signup_general"><u>일반 회원가입하기</u></string>

    <string name="onboarding_title_1">우리 동네 방문 서비스 찾기</string>
    <string name="onboarding_subtitle_1">내 주변에서 받을 수 있는\n방문 서비스를 탐색해보세요</string>
    <string name="onboarding_title_2">안심할 수 있는 전문가</string>
    <string name="onboarding_subtitle_2">검증된 전문가와 안전하게\n연결됩니다</string>
    <string name="onboarding_title_3">버튼 하나로 예약 완료</string>
    <string name="onboarding_subtitle_3">예약부터 결제까지 간편하게\n관리하세요</string>
    <string name="onboarding_next">다음</string>
    <string name="onboarding_start">시작하기</string>

    // 이용약관
    <string name="terms_title_service">이용 약관</string>
    <string name="terms_content_service" formatted="false">
        <![CDATA[
        <h4><b>제1조 목적</b></h4>
        본 약관은 “나어때”(이하 ‘회사’)가 제공하는 서비스(이하 ‘서비스’)의 이용조건 및 절차, 회사와 회원의 권리·의무를 규정함을 목적으로 합니다.
        <br><br>

        <h4><b>제2조 회원가입</b></h4>
        회원은 회사가 정한 절차에 따라 가입하며, 허위 정보를 기재할 경우 서비스 이용이 제한될 수 있습니다.
        <br><br>

        <h4><b>제3조 서비스 이용</b></h4>
        회사는 회원에게 예약, 결제, 위치 기반 매칭 등 서비스를 제공합니다. 단, 서비스 내용은 회사 사정에 따라 변경될 수 있습니다.
        <br><br>

        <h4><b>제4조 금지행위</b></h4>
        ① 타인의 정보 도용, 허위 예약, 법령 위반 행위는 금지됩니다.<br>
        ② 회원은 회사가 제공하는 결제 시스템을 우회하여, 회사의 수수료를 회피하기 위한 행위를 해서는 안 됩니다.<br>
        ③ 사장님(제휴 매장 포함)은 회원에게 회사 서비스 외부 결제를 유도하거나, 외부 계좌이체를 권유할 수 없습니다.
        <br><br>

        <h4><b>제5조 예약 및 결제</b></h4>
        ① 모든 예약은 회사가 제공하는 결제 시스템을 통해 사전 결제를 완료해야만 확정됩니다.<br>
        ② 결제 완료 전 상태의 예약은 확정되지 않으며, 지정된 시간 내 결제가 이루어지지 않을 경우 자동 취소됩니다.<br>
        ③ 회사는 회원과 사장님 간 거래의 안전을 보장하기 위하여 결제 대금을 일정 기간 보관(에스크로) 후 정산합니다.
        <br><br>

        <h4><b>제6조 취소 및 환불</b></h4>
        ① 회원이 예약을 취소할 경우, 회사는 결제 수단에 따라 결제액의 5%를 플랫폼 운영 수수료로 공제한 후 환불합니다.<br>
        ② 사장님 귀책 사유로 예약이 취소될 경우, 회원은 전액 환불을 받습니다.<br>
        ③ 예약 당일 무단 취소 및 노쇼(No-Show)의 경우, 환불이 제한될 수 있으며 이는 서비스 내 정책에 따라 고지됩니다.<br>
        ④ 환불·취소 정책은 관계 법령 및 소비자분쟁해결기준을 준수합니다.<br>
        ⑤ 회원이 예약 시간에 방문하지 않아 노쇼(No-Show)가 발생한 경우, 회사는 결제액의 50%를 사장님에게 정산하고, 나머지 50%에서 플랫폼 수수료를 공제한 후 회원에게 환불합니다.
        <br><br>
        ]]>
    </string>

    <string name="terms_title_location">위치기반 서비스 이용약관</string>
    <string name="terms_content_location">
        <![CDATA[
        <h4><b>위치정보 수집 항목</b></h4>
        GPS, 네트워크 기반 위치.
        <br><br>

        <h4><b>이용 목적</b></h4>
        “회원 근처의 제휴 매장을 추천하고, 예약 가능한 서비스를 보여주기 위함.”
        <br><br>

        <h4><b>보유 및 이용 기간</b></h4>
        서비스 제공 후 즉시 파기 (단, 예약 이력은 1년 보관).
        <br><br>

        <h4><b>제3자 제공</b></h4>
        예약 확정 시 매장에 고객의 위치와 연락처 제공.
        <br><br>

        <h4><b>이용자의 권리</b></h4>
        위치정보 수집/이용/제공 동의 철회 가능.
        <br><br>

        <h4><b>회사의 의무</b></h4>
        위치정보 보호, 오·남용 방지.
        <br><br>

        <h4><b>위치정보 관리 책임자</b></h4>
        이름 / 이메일 / 전화번호.
        <br><br>
        ]]>
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!--직원 삭제-->
    <string name="delete_underlined"><u>삭제</u></string>

    <!--매장 관리-->
    <string name="add">추가하기</string>
    <string name="edit">수정하기</string>
    <string name="hour_suffix">%1$s시간</string>
    <string name="minute_suffix">%1$s분</string>
    <string name="duration_invalid">소요 시간은 0분일 수 없습니다.</string>
    <string name="duration_title">소요 시간 선택</string>

    <string name="notice_add_title">공지 추가</string>
    <string name="notice_title_label">제목</string>
    <string name="notice_title_hint">제목을 입력해주세요.</string>
    <string name="notice_title_count_default">0/30자</string>
    <string name="notice_content_label">내용</string>
    <string name="notice_content_hint">내용을 입력해주세요.</string>
    <string name="notice_content_count_default">0/50자</string>
    <string name="notice_submit">공지 등록하기</string>

    <string name="review_visit_date">%1$s 방문</string>

</resources>
